# ChangeLog for app-office/scribus
# Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-office/scribus/ChangeLog,v 1.58 2005/07/07 17:51:26 hanno Exp $

*scribus-1.2.2.1 (07 Jul 2005)

  07 Jul 2005; Hanno Boeck <hanno@gentoo.org> +scribus-1.2.2.1.ebuild:
  Version bump.

*scribus-1.2.2-r1 (04 Jul 2005)

  04 Jul 2005; Hanno Boeck <hanno@gentoo.org>
  +files/scribus-1.2.2-crash-fix.diff, +scribus-1.2.2-r1.ebuild:
  Fix for crash bug.

*scribus-1.2.2 (04 Jul 2005)

  04 Jul 2005; <hanno@gentoo.org> +scribus-1.2.2.ebuild:
  Version bump.

  20 Apr 2005; Markus Rothe <corsair@gentoo.org> scribus-1.2.1.ebuild:
  Stable on ppc64

  09 Apr 2005; Michael Hanselmann <hansmi@gentoo.org> scribus-1.2.1.ebuild:
  Stable on ppc.

  06 Mar 2005; Marcus D. Hanwell <cryos@gentoo.org> scribus-1.2.1.ebuild:
  Marked stable on amd64.

  24 Feb 2005; Gustavo Zacarias <gustavoz@gentoo.org> scribus-1.2.1.ebuild:
  Stable on sparc

  22 Feb 2005; Hanno Boeck <hanno@gentoo.org> scribus-1.2.1.ebuild:
  Stable on x86.

  27 Jan 2005; Hanno Boeck <hanno@gentoo.org> scribus-1.2.1.ebuild:
  Make menu entry work and use portage macros domenu and doicon.

*scribus-1.2.1 (08 Jan 2005)

  08 Jan 2005; Hanno Boeck <hanno@gentoo.org> +scribus-1.2.1.ebuild:
  Version bump.

  23 Nov 2004; Hanno Boeck <hanno@gentoo.org> scribus-1.2.ebuild:
  Update dependency to qt-3.3.3 (see bug #65419).

  17 Oct 2004; Dylan Carlson <absinthe@gentoo.org> scribus-1.1.7.ebuild,
  scribus-1.2.ebuild:
  stable on amd64.

  25 Sep 2004; Jason Wever <weeve@gentoo.org> scribus-1.2.ebuild:
  Stable on sparc.

  20 Sep 2004; <SeJo@gentoo.org> scribus-1.2.ebuild:
  stable on ppc requested by: 64668

  20 Sep 2004; Hanno Boeck <hanno@gentoo.org> scribus-1.2.ebuild:
  Stable on x86.

  03 Sep 2004; Tom Gall <tgall@gentoo.org> scribus-1.2.ebuild:
  added ~ppc64, bug #62704

*scribus-1.2 (30 Aug 2004)

  30 Aug 2004; Hanno Boeck <hanno@gentoo.org> +scribus-1.2.ebuild: