@@ -1,6 +1,9 @@
 # ChangeLog for app-office/scribus
 # Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-office/scribus/ChangeLog,v 1.58 2005/07/07 17:51:26 hanno Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-office/scribus/ChangeLog,v 1.59 2005/07/13 14:06:26 greg_g Exp $
+
+  13 Jul 2005; Gregorio Guidi <greg_g@gentoo.org> scribus-1.2.2.1.ebuild:
+  Switch from kde-functions.eclass to qt3.eclass. Also fixes bug #97956.
 
 *scribus-1.2.2.1 (07 Jul 2005)
 
